# python-react-template-project

./: LICENSE  README.md  copier.yaml  pyproject.toml
.github/workflows/: test-template.yml
entity_template/backend/tests/{{ module_name }}/unit/: test_{{ entity_slug }}_entity.py.jinja
module_template/backend/tests/integration/{{ module_name }}/: test_{{ module_name }}_api.py.jinja
module_template/backend/tests/unit/{{ module_name }}/: test_{{ module_name }}_use_cases.py.jinja
module_template/backend/tests/{{ module_name }}/integration/: test_{{ entity_slug }}_api.py.jinja
module_template/backend/tests/{{ module_name }}/unit/: test_{{ entity_slug }}_use_cases.py.jinja  test_{{ module_name }}_use_cases.py.jinja
repository_template/backend/tests/{{ module_name }}/unit/: test_{{ entity_slug }}_repository.py.jinja
template/: .env.example.jinja  .gitignore  .pre-commit-config.yaml  LICENSE.jinja  Makefile.jinja  README.md.jinja  docker-compose.yml.jinja  justfile.jinja
template/.github/: dependabot.yml
template/.github/workflows/: ci.yml.jinja
template/backend/: .dockerignore  Dockerfile.jinja  pyproject.toml.jinja
template/backend/src/{{ package_name }}/: config.py  config.py.jinja  main.py
template/backend/tests/: conftest.py.jinja
template/backend/tests/integration/: test_health.py
template/backend/tests/unit/: test_config.py.jinja
template/frontend/: Dockerfile.jinja  package.json.jinja  vite.config.ts
template/frontend/src/: App.test.tsx.jinja  App.tsx.jinja  index.css  main.tsx
tests/: test_template.py
(+24 files in other folders)
