[project]
name = "python-template-project"
version = "0.1.0"
description = "Copier template for Python/Flask + React projects using Clean Architecture and DDD"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.4",
    "pytest>=8.3",
    "rust-just>=1.57.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: generates a full project and runs its toolchain (network + installs required)"]
